--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a href="index.html">Login</a>
             </span>
         </header>
-            <div class="flex" id="main_content">
+            <div id="main_content">
                 <div class="col-left">
                   <h2>Tic Tac Toe</h2>
                   <div class="game--status"></div>
