--- a/website/public/index.html
+++ b/website/public/index.html
@@ -18,11 +18,20 @@
               <a href="index.html">Login</a>
             </span>
         </header>
-            <div class="flex" id="main_content">
+            <div id="main_content">
                 <div class="col-left">
                   <h2>Tic Tac Toe</h2>
                   <div class="game--status"></div>
-                  <div id="game-container" class="game--container">
+                  <div class="game--container">
+                      <div data-cell-index="0" class="cell"></div>
+                      <div data-cell-index="1" class="cell"></div>
+                      <div data-cell-index="2" class="cell"></div>
+                      <div data-cell-index="3" class="cell"></div>
+                      <div data-cell-index="4" class="cell"></div>
+                      <div data-cell-index="5" class="cell"></div>
+                      <div data-cell-index="6" class="cell"></div>
+                      <div data-cell-index="7" class="cell"></div>
+                      <div data-cell-index="8" class="cell"></div>
                   </div>
                 </div>
                 <div class="col-right">
@@ -36,7 +45,6 @@
         <footer id="footer" class="footer">
             CS386 Team project
         </footer>
-        <script type="module" src="ticTacToe.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+        <script defer src='tic_tac_toe.js'></script>
     </body>
 </html>
