Fixed integration problems. Website is now in stable state

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -22,16 +22,7 @@
                 <div class="col-left">
                   <h2>Tic Tac Toe</h2>
                   <div class="game--status"></div>
-                  <div class="game--container">
-                      <div data-cell-index="0" class="cell"></div>
-                      <div data-cell-index="1" class="cell"></div>
-                      <div data-cell-index="2" class="cell"></div>
-                      <div data-cell-index="3" class="cell"></div>
-                      <div data-cell-index="4" class="cell"></div>
-                      <div data-cell-index="5" class="cell"></div>
-                      <div data-cell-index="6" class="cell"></div>
-                      <div data-cell-index="7" class="cell"></div>
-                      <div data-cell-index="8" class="cell"></div>
+                  <div  id="game--container" class="game--container">
                   </div>
                 </div>
                 <div class="col-right">
@@ -45,6 +36,7 @@
         <footer id="footer" class="footer">
             CS386 Team project
         </footer>
-        <script defer src='tic_tac_toe.js'></script>
+        <script type="module" src="ticTacToe.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
     </body>
 </html>
