changed join id

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -19,7 +19,7 @@
             </span>
         </header>
             <div id="main_content">
-              <div id="join">Join Tic Tac Toe</div>
+              <div id="joinTTT">Join Tic Tac Toe</div>
             </div>
         <footer id="footer" class="footer">
             CS386 Team project
