Revert "Zach lobby prototype"

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -19,12 +19,32 @@
             </span>
         </header>
             <div id="main_content">
-              <div id="join">Join Tic Tac Toe</div>
+                <div class="col-left">
+                  <h2>Tic Tac Toe</h2>
+                  <div class="game--status"></div>
+                  <div class="game--container">
+                      <div data-cell-index="0" class="cell"></div>
+                      <div data-cell-index="1" class="cell"></div>
+                      <div data-cell-index="2" class="cell"></div>
+                      <div data-cell-index="3" class="cell"></div>
+                      <div data-cell-index="4" class="cell"></div>
+                      <div data-cell-index="5" class="cell"></div>
+                      <div data-cell-index="6" class="cell"></div>
+                      <div data-cell-index="7" class="cell"></div>
+                      <div data-cell-index="8" class="cell"></div>
+                  </div>
+                </div>
+                <div class="col-right">
+                  <h2>In-Game Chat</h2>
+                  <div id="chat">
+                      CHAT WILL GO HERE
+                  </div>
+                  <button class="game--restart ingame_button">Reset Game</button>
+                </div>
             </div>
         <footer id="footer" class="footer">
             CS386 Team project
         </footer>
-        <script type="module" src="index.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+        <script defer src='tic_tac_toe.js'></script>
     </body>
 </html>
