Added mancala to project. This includes server side code in server.js. Client-side code in mancala.js and accompaning html and css files. Mancala button added to index.html

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -20,6 +20,7 @@
         </header>
             <div id="main_content">
               <div id="joinTTT">Join Tic Tac Toe</div>
+              <div id="joinMancala">Join Mancala</div>
             </div>
         <footer id="footer" class="footer">
             CS386 Team project
