--- a/website/public/ticTacToe.html
+++ b/website/public/ticTacToe.html
@@ -7,7 +7,7 @@
                        maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="ticTacToe.css">
         <title>GameyTime</title>
     </head>
     <body>
