update html and css

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -18,10 +18,25 @@
               <a href="index.html">Login</a>
             </span>
         </header>
-            <div id="main_content">
-              <div id="joinTTT">Join Tic Tac Toe</div>
-              <div id="joinMancala">Join Mancala</div>
+        <div id="main_banner">
+            <p id="banner_title">Let's Play!</p>
+            <p id="banner_subtitle">You can explore games and playing with your friend without download!</p>
+        </div>
+        <div id="gamelist">
+            <p>Here’s the games you can play anytime</p>
+            <div id="gameBox">
+                <div id="joinTTT">
+                    <img src="images/TicTacToeBg.png" alt="goTicTacToe" title="goTicTacToe">
+                </div>
+                <p>Tic Tac Toe</p>
             </div>
+            <div id="gameBox">
+                <div id="joinMancala">
+                    <img src="images/MancalaBg.png" alt="goMancala" title="goMancala">
+                </div>
+                <p>Mancala</p>
+            </div>
+        </div>
         <footer id="footer" class="footer">
             CS386 Team project
         </footer>
