Add index.html and style.css
1. Add loading modal popup (it's hidden)
2. Add link for logo image
3. Add animation for games

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -11,8 +11,17 @@
         <title>GameyTime</title>
     </head>
     <body>
+    <!-- for loading modal, change z-index and opacity -->
+    <div id="loading">
+        <div id="loadingModal">
+            <p>Waiting for the player...</p>
+            <div id="loaderbox">
+                <div class="loader"></div>
+            </div>
+        </div>
+    </div>
         <header id="header" class="header">
-            <img src="images/logo.png" class="logo">
+            <a href="index.html"><img src="images/logo.png" class="logo"></a>
             <span class="menu">
               <a href="index.html">Home</a>
               <a href="index.html">Login</a>
