implemented Sugi's loading screen with javascript in index.js

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
     <!-- for loading modal, change z-index and opacity -->
-    <div id="loading">
+    <div id="loading" class="loading-off">
         <div id="loadingModal">
             <p>Waiting for the player...</p>
             <div id="loaderbox">
