Uploaded working version of login/signup pages

--- a/website/public/indexLoggedIn.html
+++ b/website/public/indexLoggedIn.html
@@ -14,13 +14,13 @@
         <header id="header" class="header">
             <img src="images/logo.png" class="logo">
             <span class="menu">
-              <a href="index.html">Home</a>
-              <a href="login.html">Login</a>
-			  <a href="signUp.html">Sign Up</a>
+              <a href="indexLoggedIn.html">Home</a>
+              <a href="profile.html">profile</a>
+			  <a href="index.html">Logout</a>
             </span>
         </header>
             <div id="main_content">
-              <div class="joinTTT">Join Tic Tac Toe</div>
+              <div id="joinTTT">Join Tic Tac Toe</div>
             </div>
         <footer id="footer" class="footer">
             CS386 Team project
