--- a/website/public/login.html
+++ b/website/public/login.html
@@ -35,10 +35,9 @@
 				</label>
 					<input class="Password" name="Password" type="text">
 					
-				<button class="Submit" type="submit">Login</button>
+				<button class="Submit" type="button">Login</button>
 		</div>
-
-        <script type="module" src="index.js"></script>
+        <script type="module" src="login.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
     </body>
 </html>
