--- a/website/public/profile.html
+++ b/website/public/profile.html
@@ -14,17 +14,19 @@
         <header id="header" class="header">
             <img src="images/logo.png" class="logo">
             <span class="menu">
-              <a href="index.html">Home</a>
-              <a href="login.html">Login</a>
-			  <a href="signUp.html">Sign Up</a>
+              <a href="indexLoggedIn.html">Home</a>
+			  <a href="index.html">Logout</a>
             </span>
         </header>
-            <div id="main_content">
-              <div class="joinTTT">Join Tic Tac Toe</div>
-            </div>
-        <footer id="footer" class="footer">
-            CS386 Team project
-        </footer>
+		
+		<div class="box">
+			<div class="Wrapper">
+			  <p class="line"></p>
+			  <p class="profile"><u>Profile Details</u></p>
+			  <p class="fullname">Placeholder</p>
+			  <p class="username">Placeholder</p>
+			</div>
+		</div>
         <script type="module" src="index.js"></script>
         <script src="/socket.io/socket.io.js"></script>		
     </body>
