--- a/website/public/signUp.html
+++ b/website/public/signUp.html
@@ -52,7 +52,7 @@
 		</div>
 		
 		
-		<script type="module" src="signUp.js" type="text/javascript"></script>
-		<script src="/socket.io/socket.io.js"></script>
+		<script type="module" src="signUp.js"></script>
+		<script src="/socket.io/socket.io.js"></script>		
     </body>
 </html>
