Integrated Gavin's and Christian's profile system into project

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -23,8 +23,8 @@
         <header id="header" class="header">
             <a href="index.html"><img src="images/logo.png" class="logo"></a>
             <span class="menu">
-              <a href="index.html">Home</a>
-              <a href="index.html">Login</a>
+              <a href="./index.html">Home</a>
+              <a href="./login.html">Login</a>
             </span>
         </header>
         <div id="main_banner">
