--- a/website/public/login.html
+++ b/website/public/login.html
@@ -19,22 +19,22 @@
 			  <a href="signUp.html">Sign Up</a>
             </span>
         </header>
-		
+
 		<div class="Wrapper">
 			<p class="MiddleBox"> </p>
 				<img src="images/logo2.png" class="logo2">
-			
+
 				<label class="UsernameLabel" for="Username">
 					Username:
 				</label>
 					<input class="Username" name="Username" type="text">
-					
 
-				<label class="PasswordLabel" for="Password">
+
+				<label input="password" class="PasswordLabel" for="Password">
 					Password:
 				</label>
 					<input class="Password" name="Password" type="text">
-					
+
 				<button class="Submit" type="button">Login</button>
 		</div>
         <script type="module" src="login.js"></script>
