Fixed password input to conceal password

--- a/website/public/login.html
+++ b/website/public/login.html
@@ -30,10 +30,10 @@
 					<input class="Username" name="Username" type="text">
 
 
-				<label input="password" class="PasswordLabel" for="Password">
+				<label class="PasswordLabel" for="Password">
 					Password:
 				</label>
-					<input class="Password" name="Password" type="text">
+					<input type="password" class="Password" name="Password" type="text">
 
 				<button class="Submit" type="button">Login</button>
 		</div>
