--- a/website/public/ticTacToe.html
+++ b/website/public/ticTacToe.html
@@ -14,8 +14,7 @@
         <header id="header" class="header">
             <img src="images/logo.png" class="logo">
             <span class="menu">
-              <a href="index.html">Home</a>
-              <a href="index.html">Login</a>
+              <a id="index-link" href="index.html">Home</a>
             </span>
         </header>
             <div id="main_content">
